analyzed bias in Vine program reviews

--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "97f63e49",
+   "id": "209b4fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "724bb9fb",
+   "id": "e2c5c09d",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4c5067fa",
+   "id": "ba74354c",
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,7 @@
     }
    ],
    "source": [
+    "# filter DataFrame for rows with at least 20 total votes\n",
     "filtered_review_df = vine_data_df[vine_data_df[\"total_votes\"]>=20]\n",
     "filtered_review_df.head()"
    ]
@@ -237,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b547bc53",
+   "id": "0c21efe3",
    "metadata": {},
    "outputs": [
     {
@@ -341,22 +342,375 @@
     }
    ],
    "source": [
+    "# filter DataFrame for rows where at least half the reviews were helpful\n",
     "helpful_df = filtered_review_df[filtered_review_df['helpful_votes']/filtered_review_df['total_votes']>=0.5]\n",
     "helpful_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9673844",
+   "execution_count": 9,
+   "id": "3a9374c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>star_rating</th>\n",
+       "      <th>helpful_votes</th>\n",
+       "      <th>total_votes</th>\n",
+       "      <th>vine</th>\n",
+       "      <th>verified_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4122</th>\n",
+       "      <td>R1B7M0OP3UNP6O</td>\n",
+       "      <td>5</td>\n",
+       "      <td>49</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334756</th>\n",
+       "      <td>R2UUV4UGGYMQG8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428946</th>\n",
+       "      <td>R9K0LZV2BK9YY</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477323</th>\n",
+       "      <td>R2OVFLNEUEGTJM</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664604</th>\n",
+       "      <td>RBE09ELJ77LQ0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             review_id  star_rating  helpful_votes  total_votes vine  \\\n",
+       "4122    R1B7M0OP3UNP6O            5             49           52    Y   \n",
+       "334756  R2UUV4UGGYMQG8            5             34           39    Y   \n",
+       "428946   R9K0LZV2BK9YY            4             37           39    Y   \n",
+       "477323  R2OVFLNEUEGTJM            3             18           25    Y   \n",
+       "664604   RBE09ELJ77LQ0            5             44           45    Y   \n",
+       "\n",
+       "       verified_purchase  \n",
+       "4122                   N  \n",
+       "334756                 N  \n",
+       "428946                 N  \n",
+       "477323                 N  \n",
+       "664604                 N  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter DataFrame for rows where review was written as part of the Vine program i.e. vine = 'Y'\n",
+    "vine_df = helpful_df[helpful_df['vine']=='Y']\n",
+    "vine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d4fc93a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>star_rating</th>\n",
+       "      <th>helpful_votes</th>\n",
+       "      <th>total_votes</th>\n",
+       "      <th>vine</th>\n",
+       "      <th>verified_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>R14W2VCHHK5V7W</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552</th>\n",
+       "      <td>R1S3T57O3OYT5S</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619</th>\n",
+       "      <td>R1BTWIBLYYVOV7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548</th>\n",
+       "      <td>R3PXNV89DFIXKV</td>\n",
+       "      <td>5</td>\n",
+       "      <td>35</td>\n",
+       "      <td>37</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1573</th>\n",
+       "      <td>R2ZF9NYVT3J7D6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>22</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           review_id  star_rating  helpful_votes  total_votes vine  \\\n",
+       "478   R14W2VCHHK5V7W            5             19           20    N   \n",
+       "552   R1S3T57O3OYT5S            5             19           20    N   \n",
+       "619   R1BTWIBLYYVOV7            5             30           30    N   \n",
+       "1548  R3PXNV89DFIXKV            5             35           37    N   \n",
+       "1573  R2ZF9NYVT3J7D6            5             19           22    N   \n",
+       "\n",
+       "     verified_purchase  \n",
+       "478                  Y  \n",
+       "552                  Y  \n",
+       "619                  Y  \n",
+       "1548                 Y  \n",
+       "1573                 Y  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter DataFrame for rows where review was written as NOT part of the Vine program i.e. vine = 'N'\n",
+    "not_vine_df = helpful_df[helpful_df['vine']=='N']\n",
+    "not_vine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51e52343",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count number of reviews in Vine program\n",
+    "vine_count = vine_df['review_id'].count()\n",
+    "vine_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a0423a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8362"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count number of reviews NOT in Vine program\n",
+    "not_vine_count = not_vine_df['review_id'].count()\n",
+    "not_vine_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2902a5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count number of 5-star reviews in Vine program\n",
+    "vine_5_star_count = vine_df[vine_df['star_rating']==5]['review_id'].count()\n",
+    "vine_5_star_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b325d0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4332"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count number of 5-star reviews NOT in Vine program\n",
+    "not_vine_5_star_count = not_vine_df[not_vine_df['star_rating']==5]['review_id'].count()\n",
+    "not_vine_5_star_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a099219f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31.914893617021278"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vine_5_star_perc = vine_5_star_count/vine_count * 100\n",
+    "vine_5_star_perc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7ce01d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51.80578808897393"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not_vine_5_star_perc = not_vine_5_star_count/not_vine_count * 100\n",
+    "not_vine_5_star_perc"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b2a279e",
+   "id": "b51de751",
    "metadata": {},
    "outputs": [],
    "source": []
